// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Inline /> should match snapshot for custom element dividers 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_none__7o6k06ex useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fn useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fv useBoxStyles_flexWrap_wrap__7o6k06ge useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y44"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_none__7o6k06ex useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fn useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fv useBoxStyles_flexWrap_nowrap__7o6k06gf"
  >
    <span
      class="reset_inlineText__6swfds2 useBoxStyles_width_none__7o6k06ex useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4"
    >
      A
    </span>
    <div
      class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0618 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_width_none__7o6k06ex"
    >
      <div>
        divider
      </div>
    </div>
  </div>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_none__7o6k06ex useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fn useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fv useBoxStyles_flexWrap_nowrap__7o6k06gf"
  >
    <span
      class="reset_inlineText__6swfds2 useBoxStyles_width_none__7o6k06ex useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4"
    >
      B
    </span>
    <div
      class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0618 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_width_none__7o6k06ex"
    >
      <div>
        divider
      </div>
    </div>
  </div>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_none__7o6k06ex useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fn useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fv useBoxStyles_flexWrap_nowrap__7o6k06gf"
  >
    <span
      class="reset_inlineText__6swfds2 useBoxStyles_width_none__7o6k06ex useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4"
    >
      C
    </span>
  </div>
</div>
`;

exports[`<Inline /> should match snapshot for default dividers 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_none__7o6k06ex useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fn useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fv useBoxStyles_flexWrap_wrap__7o6k06ge useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y44"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_none__7o6k06ex useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fn useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fv useBoxStyles_flexWrap_nowrap__7o6k06gf"
  >
    <span
      class="reset_inlineText__6swfds2 useBoxStyles_width_none__7o6k06ex useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4"
    >
      A
    </span>
    <div
      class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0618 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_width_none__7o6k06ex"
    >
      <span
        class="reset_inlineText__6swfds2 useBoxStyles_width_none__7o6k06ex useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4"
      >
        •
      </span>
    </div>
  </div>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_none__7o6k06ex useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fn useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fv useBoxStyles_flexWrap_nowrap__7o6k06gf"
  >
    <span
      class="reset_inlineText__6swfds2 useBoxStyles_width_none__7o6k06ex useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4"
    >
      B
    </span>
    <div
      class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0618 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_width_none__7o6k06ex"
    >
      <span
        class="reset_inlineText__6swfds2 useBoxStyles_width_none__7o6k06ex useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4"
      >
        •
      </span>
    </div>
  </div>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_none__7o6k06ex useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fn useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fv useBoxStyles_flexWrap_nowrap__7o6k06gf"
  >
    <span
      class="reset_inlineText__6swfds2 useBoxStyles_width_none__7o6k06ex useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4"
    >
      C
    </span>
  </div>
</div>
`;

exports[`<Inline /> should match snapshot for no dividers 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_none__7o6k06ex useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fn useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fv useBoxStyles_flexWrap_wrap__7o6k06ge useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y44 useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxq4"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_none__7o6k06ex useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fn useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fv useBoxStyles_flexWrap_nowrap__7o6k06gf"
  >
    <span
      class="reset_inlineText__6swfds2 useBoxStyles_width_none__7o6k06ex useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4"
    >
      A
    </span>
  </div>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_none__7o6k06ex useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fn useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fv useBoxStyles_flexWrap_nowrap__7o6k06gf"
  >
    <span
      class="reset_inlineText__6swfds2 useBoxStyles_width_none__7o6k06ex useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4"
    >
      B
    </span>
  </div>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_none__7o6k06ex useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fn useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fv useBoxStyles_flexWrap_nowrap__7o6k06gf"
  >
    <span
      class="reset_inlineText__6swfds2 useBoxStyles_width_none__7o6k06ex useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4"
    >
      C
    </span>
  </div>
</div>
`;

exports[`<Inline /> should not be able to render components 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_none__7o6k06ex useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fn useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fv useBoxStyles_flexWrap_wrap__7o6k06ge useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y44"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_none__7o6k06ex useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fn useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fv useBoxStyles_flexWrap_nowrap__7o6k06gf"
  >
    <span
      class="reset_inlineText__6swfds2 useBoxStyles_width_none__7o6k06ex useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4"
    >
      A
    </span>
    <div
      class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0618 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_width_none__7o6k06ex"
    >
      <div>
        divider component from test
      </div>
    </div>
  </div>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_none__7o6k06ex useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fn useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fv useBoxStyles_flexWrap_nowrap__7o6k06gf"
  >
    <span
      class="reset_inlineText__6swfds2 useBoxStyles_width_none__7o6k06ex useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4"
    >
      B
    </span>
  </div>
</div>
`;
